# covjson-pydantic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  performance.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/covjson_pydantic/: base_models.py  coverage.py  domain.py  i18n.py  ndarray.py  observed_property.py  parameter.py  reference_system.py  unit.py
tests/: test_coverage.py
tests/test_data/: categorical-data-parameter.json  continuous-data-parameter.json  coverage-json.json  coverage-mixed-type-ndarray.json  doc-example-coverage-collection.json  doc-example-coverage.json  example_py.json  grid-domain-no-y.json  grid-domain.json  int-axes.json  mixed-type-axes-2.json  mixed-type-axes.json  mixed-type-ndarray-1.json  mixed-type-ndarray-2.json  mixed-type-ndarray-3.json  mixed-type-ndarray.json  ndarray-float.json  ndarray-integer.json  ndarray-string.json  parameters.json  point-series-domain-more-z.json  point-series-domain-no-t.json  point-series-domain.json  polygon-series-coverage-collection.json  spec-axes.json  spec-domain-grid.json  spec-domain-multipoint-series.json  spec-domain-multipoint.json  spec-domain-point-compact.json  spec-domain-point-series.json  spec-domain-point.json  spec-domain-polygon-series.json  spec-domain-trajectory.json  spec-domain-vertical-profile.json  spec-ndarray.json  spec-parametergroup.json  spec-reference-system-identifierrs.json  spec-tiled-ndarray.json  spec-trajectory-coverage.json  spec-vertical-profile-coverage.json  (+2 more)
